--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Album - Livret</title>
+  <title>Affamé - Livret</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
   <header>
     <h1>Mathieu Stocker</h1>
-    <p class="album-title">Album 1</p>
+    <p class="album-title">Affamé</p>
     <nav>
       <a href="#paroles">Paroles</a>
       <a href="#remerciements">Remerciements</a>
@@ -23,16 +23,75 @@
       <h2>Paroles</h2>
 
       <article class="chanson">
-  <h3>Free Fallin'</h3>
+  <h3>Dis moi</h3>
   <details>
     <summary>Voir les paroles</summary>
     <pre>
-Couplet 1 :
-Bla bla bla bla bla bla,
-bla bla bla bla bla bla bla...
+Couplet 1
+Tu disais qu’il n’y a rien sous ton armure
+Pas l’ombre d’une fêlure
+Sous ta peau de bébé
 
-Refrain :
-Bla bla bla bla bla bla...
+Finalement tu mentais, j’en étais sûr
+Toi qui jouais les durs
+Que t’est-il arrivé ?
+
+C’est vrai, la vie nous a tous pris de court
+Emportant pour toujours
+Ce qu’on croyait éternel
+
+Regarde sur nos visages l’eau qui coule
+Sur toutes les joues autour
+Les traces des larmes cruelles
+
+Refrain
+Tu t’es toujours moqué
+De ma larme écrasée
+Quand le moindre chagrin
+Mouille le dos de ma main
+
+L’ironie inoxydable
+De ton sourire impeccable
+Semble si loin ce soir
+
+Pont
+Dis-moi si là
+Tu te sens toujours aussi fort
+Dis-moi si là
+Tu ris toujours aussi fort
+Dis-moi si là
+Tu penses encore que j’ai tort
+
+Couplet 2
+De l’eau, un sparadrap et un baiser
+Sur un cœur arraché
+Je sais, c’est pas grand-chose
+
+Laisse-toi enfin aller dans cet espace-là
+Qui s’ouvre entre mes bras
+Accorde-toi une pause
+
+Vas-y pleure
+Laisse sortir tout ça
+Dépose le poids de ta force qui t’aveugle
+
+Refrain
+Tu t’es toujours moqué
+De ma larme écrasée
+Quand le moindre chagrin
+Mouille le dos de ma main
+
+L’ironie inoxydable
+De ton sourire impeccable
+Semble si loin ce soir
+
+Pont
+Dis-moi si là
+Tu te sens toujours aussi fort
+Dis-moi si là
+Tu ris toujours aussi fort
+Dis-moi si là
+Tu penses encore que j’ai tort
 </pre>
 </details>
 <details>
@@ -78,4 +137,5 @@ bla bla bla bla bla bla bla...
 
 </body>
 </html>
+
 
