--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <details>
     <summary>Voir les paroles</summary>
     <pre>
-Couplet 1
+---<b>Couplet 1</b>---
 Tu disais qu’il n’y a rien sous ton armure
 Pas l’ombre d’une fêlure
 Sous ta peau de bébé
@@ -44,7 +44,7 @@ Regarde sur nos visages l’eau qui coule
 Sur toutes les joues autour
 Les traces des larmes cruelles
 
-Refrain
+---<b>Refrain</b>---
 Tu t’es toujours moqué
 De ma larme écrasée
 Quand le moindre chagrin
@@ -54,7 +54,7 @@ L’ironie inoxydable
 De ton sourire impeccable
 Semble si loin ce soir
 
-Pont
+---<b>Pont</b>---
 Dis-moi si là
 Tu te sens toujours aussi fort
 Dis-moi si là
@@ -62,7 +62,7 @@ Tu ris toujours aussi fort
 Dis-moi si là
 Tu penses encore que j’ai tort
 
-Couplet 2
+---<b>Couplet 2</b>---
 De l’eau, un sparadrap et un baiser
 Sur un cœur arraché
 Je sais, c’est pas grand-chose
@@ -75,7 +75,7 @@ Vas-y pleure
 Laisse sortir tout ça
 Dépose le poids de ta force qui t’aveugle
 
-Refrain
+---<b>Refrain</b>---
 Tu t’es toujours moqué
 De ma larme écrasée
 Quand le moindre chagrin
@@ -85,7 +85,7 @@ L’ironie inoxydable
 De ton sourire impeccable
 Semble si loin ce soir
 
-Pont
+---<b>Pont</b>---
 Dis-moi si là
 Tu te sens toujours aussi fort
 Dis-moi si là
@@ -137,5 +137,6 @@ bla bla bla bla bla bla bla...
 
 </body>
 </html>
+
 
 
