--- a/index.html
+++ b/index.html
@@ -97,7 +97,18 @@ Tu penses encore que j’ai tort
 <details>
 <summary>Histoire de la chanson</summary>
 <p>
-J’ai écrit cette chanson en pensant à [...]. Elle est née d’une improvisation en studio, etc.
+À Jean-Jacques Goldman,
+Qui a sans doute influencé cette ligne mélodique,
+Peut-être plus que les autres.
+
+À Tiphaine Rollin,
+Qui a posé sa jolie voix sur ce titre,
+À la faveur d’une belle rencontre, il y a bien longtemps.
+
+Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),
+Qui a connu d’autres rimes,
+D’autres histoires,
+Et bien des hésitations.
 </p>
 </details>
 
@@ -137,6 +148,7 @@ bla bla bla bla bla bla bla...
 
 </body>
 </html>
+
 
 
 
