--- a/index.html
+++ b/index.html
@@ -115,13 +115,92 @@ Et bien des hésitations.
 </article>
 
       <article class="chanson">
-        <h3>Black or white</h3>
-        <pre>
-Couplet 1 :
-Bla bla bla bla bla bla,
-bla bla bla bla bla bla bla...
-        </pre>
-      </article>
+  <h3>Les Heures (ou la nuit blanche de Chloé</h3>
+  <details>
+    <summary>Voir les paroles</summary>
+    <pre>
+Couplet 1
+J’ai pas été habituée
+À autre chose qu’un défilé
+D’hommes qui en voulaient
+À ma tranquillité
+Et qui promettaient bien plus qu’ils ne pouvaient
+
+Couplet 2
+Pourtant, je ne demandais rien
+Pas de prince charmant au sourire divin
+Ni de mec marrant, ni de philosophe serein
+Pas de chevalier me servant jusqu’à la Saint-Glinglin...
+
+Refrain
+J’ai pas dormi de la nuit
+Assise au bord de mon lit
+J’attendais que les heures passent
+Immobiles, comme si
+Tu leur avais jeté un sort
+À ces heures où tout le monde dort
+Je n’ai cessé de penser à toi
+En regardant dehors
+
+Couplet 3
+Depuis que je suis toute petite
+Les contes de fées parfumés à la violette
+Aux extraits de guimauve me font tourner la tête
+Comme une girouette un lendemain de fête
+
+Couplet 4
+Moi qui trouvais idiots les amoureux
+Qui rêvent à leur chérie en contemplant les cieux
+Comme si de leur vie ils n’avaient rien vu d’aussi bleu,
+Même quand ils plantent leurs yeux dans l’azur pluvieux
+
+Refrain
+J’ai pas dormi de la nuit
+Assise au bord de mon lit
+J’attendais que les heures passent
+Immobiles, comme si
+Tu leur avais jeté un sort
+À ces heures où tout le monde dort
+Je n’ai cessé de penser à toi
+En regardant dehors
+
+Couplet 5
+Les ailes qui poussent dans mon dos
+Me chatouillent les idéaux
+Mon esprit a quitté mon cerveau
+Il est descendu d’un niveau,
+Là, juste au niveau du cœur...
+
+Refrain (final)
+J’ai pas dormi de la nuit
+Assise au bord de mon lit
+J’attendais que les heures passent
+Immobiles, comme si
+Tu leur avais jeté un sort
+À ces heures où tout le monde dort
+Je n’ai cessé de penser à toi
+En regardant dehors
+</pre>
+</details>
+<details>
+<summary>Histoire de la chanson</summary>
+<p>
+À Jean-Jacques Goldman,
+Qui a sans doute influencé cette ligne mélodique,
+Peut-être plus que les autres.
+
+À Tiphaine Rollin,
+Qui a posé sa jolie voix sur ce titre,
+À la faveur d’une belle rencontre, il y a bien longtemps.
+
+Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),
+Qui a connu d’autres rimes,
+D’autres histoires,
+Et bien des hésitations.
+</p>
+</details>
+
+</article>
       
     </section>
 
@@ -148,6 +227,7 @@ bla bla bla bla bla bla bla...
 
 </body>
 </html>
+
 
 
 
