--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@ Tu penses encore que j’ai tort
 <details>
 <summary>Histoire de la chanson</summary>
 <p>
-À Jean-Jacques Goldman,
-Qui a sans doute influencé cette ligne mélodique,
-Peut-être plus que les autres.
+À Jean-Jacques Goldman,\n
+Qui a sans doute influencé cette ligne mélodique,\n
+Peut-être plus que les autres.\n
 
-À Tiphaine Rollin,
-Qui a posé sa jolie voix sur ce titre,
-À la faveur d’une belle rencontre, il y a bien longtemps.
+À Tiphaine Rollin,\n
+Qui a posé sa jolie voix sur ce titre,\n
+À la faveur d’une belle rencontre, il y a bien longtemps.\n
 
-Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),
-Qui a connu d’autres rimes,
-D’autres histoires,
+Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),\n
+Qui a connu d’autres rimes,\n
+D’autres histoires,\n
 Et bien des hésitations.
 </p>
 </details>
@@ -115,24 +115,24 @@ Et bien des hésitations.
 </article>
 
       <article class="chanson">
-  <h3>Les Heures (ou la nuit blanche de Chloé</h3>
+  <h3>Les Heures (ou la nuit blanche de Chloé)</h3>
   <details>
     <summary>Voir les paroles</summary>
     <pre>
-Couplet 1
+---<b>Couplet 1</b>---
 J’ai pas été habituée
 À autre chose qu’un défilé
 D’hommes qui en voulaient
 À ma tranquillité
 Et qui promettaient bien plus qu’ils ne pouvaient
 
-Couplet 2
+---<b>Couplet 2</b>---
 Pourtant, je ne demandais rien
 Pas de prince charmant au sourire divin
 Ni de mec marrant, ni de philosophe serein
 Pas de chevalier me servant jusqu’à la Saint-Glinglin...
 
-Refrain
+---<b>Refrain</b>---
 J’ai pas dormi de la nuit
 Assise au bord de mon lit
 J’attendais que les heures passent
@@ -142,19 +142,19 @@ Tu leur avais jeté un sort
 Je n’ai cessé de penser à toi
 En regardant dehors
 
-Couplet 3
+---<b>Couplet 3</b>---
 Depuis que je suis toute petite
 Les contes de fées parfumés à la violette
 Aux extraits de guimauve me font tourner la tête
 Comme une girouette un lendemain de fête
 
-Couplet 4
+---<b>Couplet 4</b>---
 Moi qui trouvais idiots les amoureux
 Qui rêvent à leur chérie en contemplant les cieux
 Comme si de leur vie ils n’avaient rien vu d’aussi bleu,
 Même quand ils plantent leurs yeux dans l’azur pluvieux
 
-Refrain
+---<b>Refrain</b>---
 J’ai pas dormi de la nuit
 Assise au bord de mon lit
 J’attendais que les heures passent
@@ -164,14 +164,14 @@ Tu leur avais jeté un sort
 Je n’ai cessé de penser à toi
 En regardant dehors
 
-Couplet 5
+---<b>Couplet 5</b>---
 Les ailes qui poussent dans mon dos
 Me chatouillent les idéaux
 Mon esprit a quitté mon cerveau
 Il est descendu d’un niveau,
 Là, juste au niveau du cœur...
 
-Refrain (final)
+---<b>Refrain</b>---
 J’ai pas dormi de la nuit
 Assise au bord de mon lit
 J’attendais que les heures passent
@@ -227,6 +227,7 @@ Et bien des hésitations.
 
 </body>
 </html>
+
 
 
 
