--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Affamé - Livret</title>
+  <title>Mathieu Stocker - Livret</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -227,6 +227,7 @@ Et bien des hésitations.
 
 </body>
 </html>
+
 
 
 
