--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@ Tu penses encore que j’ai tort
 <details>
 <summary>Histoire de la chanson</summary>
 <p>
-À Jean-Jacques Goldman,\n
-Qui a sans doute influencé cette ligne mélodique,\n
-Peut-être plus que les autres.\n
+À Jean-Jacques Goldman,<br>
+Qui a sans doute influencé cette ligne mélodique,<br>
+Peut-être plus que les autres.<br>
 
-À Tiphaine Rollin,\n
-Qui a posé sa jolie voix sur ce titre,\n
-À la faveur d’une belle rencontre, il y a bien longtemps.\n
-
-Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),\n
-Qui a connu d’autres rimes,\n
-D’autres histoires,\n
+À Tiphaine Rollin,<br>
+Qui a posé sa jolie voix sur ce titre,<br>
+À la faveur d’une belle rencontre, il y a bien longtemps.<br>
+<br>
+Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),<br>
+Qui a connu d’autres rimes,<br>
+D’autres histoires,<br>
 Et bien des hésitations.
 </p>
 </details>
@@ -185,18 +185,22 @@ En regardant dehors
 <details>
 <summary>Histoire de la chanson</summary>
 <p>
-À Jean-Jacques Goldman,
-Qui a sans doute influencé cette ligne mélodique,
-Peut-être plus que les autres.
-
-À Tiphaine Rollin,
-Qui a posé sa jolie voix sur ce titre,
-À la faveur d’une belle rencontre, il y a bien longtemps.
-
-Au temps qu’il m’a fallu pour terminer cette chanson (plus de dix ans !),
-Qui a connu d’autres rimes,
-D’autres histoires,
-Et bien des hésitations.
+À Chloé Ernest,<br>
+Ce morceau n’existe que pour toi,<br>
+Ta voix, et tes yeux pétillants.<br>
+Tu le chantes bien mieux que moi...<br>
+<br>
+Si ce titre finit sur un album complet,<br>
+Je ne te laisse pas d’autre choix<br>
+Que de prendre place derrière le micro.<br>
+Ces mots sont les premiers que nous ayons échangés,<br>
+Avant même d’avoir entendu le son de ta voix.<br>
+<br>
+À Aurore Beneteau,<br>
+Qui m’a offert le ukulélé<br>
+Qui aurait dû sonner sur ce titre…<br>
+Ça n’a pas marché,<br>
+Mais la prochaine sera la bonne.
 </p>
 </details>
 
@@ -227,6 +231,7 @@ Et bien des hésitations.
 
 </body>
 </html>
+
 
 
 
