--- a/index.html
+++ b/index.html
@@ -205,6 +205,109 @@ Mais la prochaine sera la bonne.
 </details>
 
 </article>
+      <article class="chanson">
+  <h3>Lonely Stars</h3>
+  <details>
+    <summary>Voir les paroles</summary>
+    <pre>
+---<b>Couplet 1</b>---
+It took me quite a long time
+To make my way out of this bar
+I don’t really remember why
+
+I only had one whiskey glass
+That was just refilled several times
+Can you tell me what’s wrong with that?
+
+---<b>Couplet 2</b>---
+I finally managed to reach
+The door that opened on the street
+Where people laughed and talked too loud
+
+Saturday night turned out to be
+Nothing but what it used to be
+A lonely time among the crowd
+
+---<b>Refrain</b>---
+But do you know what it feels like
+To light up the empty darkness
+I don’t think that I am a genius
+Nor a butthead, no kind of freak
+I’m just a normal guy wasting ordinary light
+In the emptiness of the dark
+Just like so many others
+Just like so many
+Lonely stars
+
+---<b>Couplet 3</b>---
+I waited for fifteen minutes
+The streetcar that I did not take
+I made up my mind to walk home
+
+As I entered my little flat
+As tidy as it’s always been
+I didn’t feel happy with that
+
+---<b>Couplet 4</b>---
+I sat down on the purple rug
+In the middle of the living-room
+I felt tears falling down my cheeks
+
+When I woke up this morning
+I was lying on the purple rug
+I don’t really remember why
+
+---<b>Refrain</b>---
+But I do know what it feels like
+To light up the empty darkness
+I don’t think that I am a genius
+Nor a butthead, no kind of freak
+I’m just a normal guy wasting ordinary light
+In the emptiness of the dark
+Just like so many others
+Just like so many
+Lonely stars
+
+---<b>Pont</b>---
+But do you know how it feels?
+Do you know how it feels?
+
+---<b>Refrain</b>---
+But do you know how it feels
+To light up the empty darkness
+I don’t think that I am a genius
+Nor a butthead, no kind of freak
+I’m just a normal guy wasting ordinary light
+In the emptiness of the dark
+Just like so many others
+Just like so many
+Lonely stars
+Lonely stars... Lonely stars.
+</pre>
+</details>
+<details>
+<summary>Histoire de la chanson</summary>
+<p>
+À Chloé Ernest,<br>
+Ce morceau n’existe que pour toi,<br>
+Ta voix, et tes yeux pétillants.<br>
+Tu le chantes bien mieux que moi...<br>
+<br>
+Si ce titre finit sur un album complet,<br>
+Je ne te laisse pas d’autre choix<br>
+Que de prendre place derrière le micro.<br>
+Ces mots sont les premiers que nous ayons échangés,<br>
+Avant même d’avoir entendu le son de ta voix.<br>
+<br>
+À Aurore Beneteau,<br>
+Qui m’a offert le ukulélé<br>
+Qui aurait dû sonner sur ce titre…<br>
+Ça n’a pas marché,<br>
+Mais la prochaine sera la bonne.
+</p>
+</details>
+
+</article>
       
     </section>
 
@@ -231,6 +334,7 @@ Mais la prochaine sera la bonne.
 
 </body>
 </html>
+
 
 
 
