--- a/index.html
+++ b/index.html
@@ -181,6 +181,72 @@ Tu leur avais jeté un sort
 Je n’ai cessé de penser à toi
 En regardant dehors
 </pre>
+    <details>
+      <summary>Voir la traduction</summary>
+      <pre>
+---<b>Couplet 1</b>---
+J’ai pas été habituée
+À autre chose qu’un défilé
+D’hommes qui en voulaient
+À ma tranquillité
+Et qui promettaient bien plus qu’ils ne pouvaient
+
+---<b>Couplet 2</b>---
+Pourtant, je ne demandais rien
+Pas de prince charmant au sourire divin
+Ni de mec marrant, ni de philosophe serein
+Pas de chevalier me servant jusqu’à la Saint-Glinglin...
+
+---<b>Refrain</b>---
+J’ai pas dormi de la nuit
+Assise au bord de mon lit
+J’attendais que les heures passent
+Immobiles, comme si
+Tu leur avais jeté un sort
+À ces heures où tout le monde dort
+Je n’ai cessé de penser à toi
+En regardant dehors
+
+---<b>Couplet 3</b>---
+Depuis que je suis toute petite
+Les contes de fées parfumés à la violette
+Aux extraits de guimauve me font tourner la tête
+Comme une girouette un lendemain de fête
+
+---<b>Couplet 4</b>---
+Moi qui trouvais idiots les amoureux
+Qui rêvent à leur chérie en contemplant les cieux
+Comme si de leur vie ils n’avaient rien vu d’aussi bleu,
+Même quand ils plantent leurs yeux dans l’azur pluvieux
+
+---<b>Refrain</b>---
+J’ai pas dormi de la nuit
+Assise au bord de mon lit
+J’attendais que les heures passent
+Immobiles, comme si
+Tu leur avais jeté un sort
+À ces heures où tout le monde dort
+Je n’ai cessé de penser à toi
+En regardant dehors
+
+---<b>Couplet 5</b>---
+Les ailes qui poussent dans mon dos
+Me chatouillent les idéaux
+Mon esprit a quitté mon cerveau
+Il est descendu d’un niveau,
+Là, juste au niveau du cœur...
+
+---<b>Refrain</b>---
+J’ai pas dormi de la nuit
+Assise au bord de mon lit
+J’attendais que les heures passent
+Immobiles, comme si
+Tu leur avais jeté un sort
+À ces heures où tout le monde dort
+Je n’ai cessé de penser à toi
+En regardant dehors
+</pre>
+</details>
 </details>
 <details>
 <summary>Histoire de la chanson</summary>
@@ -334,6 +400,7 @@ Mais la prochaine sera la bonne.
 
 </body>
 </html>
+
 
 
 
