--- a/index.html
+++ b/index.html
@@ -181,72 +181,6 @@ Tu leur avais jeté un sort
 Je n’ai cessé de penser à toi
 En regardant dehors
 </pre>
-    <details>
-      <summary>Voir la traduction</summary>
-      <pre>
----<b>Couplet 1</b>---
-J’ai pas été habituée
-À autre chose qu’un défilé
-D’hommes qui en voulaient
-À ma tranquillité
-Et qui promettaient bien plus qu’ils ne pouvaient
-
----<b>Couplet 2</b>---
-Pourtant, je ne demandais rien
-Pas de prince charmant au sourire divin
-Ni de mec marrant, ni de philosophe serein
-Pas de chevalier me servant jusqu’à la Saint-Glinglin...
-
----<b>Refrain</b>---
-J’ai pas dormi de la nuit
-Assise au bord de mon lit
-J’attendais que les heures passent
-Immobiles, comme si
-Tu leur avais jeté un sort
-À ces heures où tout le monde dort
-Je n’ai cessé de penser à toi
-En regardant dehors
-
----<b>Couplet 3</b>---
-Depuis que je suis toute petite
-Les contes de fées parfumés à la violette
-Aux extraits de guimauve me font tourner la tête
-Comme une girouette un lendemain de fête
-
----<b>Couplet 4</b>---
-Moi qui trouvais idiots les amoureux
-Qui rêvent à leur chérie en contemplant les cieux
-Comme si de leur vie ils n’avaient rien vu d’aussi bleu,
-Même quand ils plantent leurs yeux dans l’azur pluvieux
-
----<b>Refrain</b>---
-J’ai pas dormi de la nuit
-Assise au bord de mon lit
-J’attendais que les heures passent
-Immobiles, comme si
-Tu leur avais jeté un sort
-À ces heures où tout le monde dort
-Je n’ai cessé de penser à toi
-En regardant dehors
-
----<b>Couplet 5</b>---
-Les ailes qui poussent dans mon dos
-Me chatouillent les idéaux
-Mon esprit a quitté mon cerveau
-Il est descendu d’un niveau,
-Là, juste au niveau du cœur...
-
----<b>Refrain</b>---
-J’ai pas dormi de la nuit
-Assise au bord de mon lit
-J’attendais que les heures passent
-Immobiles, comme si
-Tu leur avais jeté un sort
-À ces heures où tout le monde dort
-Je n’ai cessé de penser à toi
-En regardant dehors
-</pre>
-</details>
 </details>
 <details>
 <summary>Histoire de la chanson</summary>
@@ -350,26 +284,72 @@ Just like so many
 Lonely stars
 Lonely stars... Lonely stars.
 </pre>
+    <details>
+      <summary>Voir la traduction</summary>
+      <pre>
+ÉTOILES ESSEULÉES
+
+---<b>Couplet 1</b>---
+Il m’a fallu pas mal de temps
+Pour m’extraire de ce bar
+Je ne me souviens pas vraiment pourquoi
+
+Je n’ai pris qu’un verre de whisky
+Que j’ai rempli plusieurs fois
+Qu’y a-t-il de mal à ça ?
+
+---<b>Couplet 2</b>---
+J’ai fini par atteindre la porte
+Qui s’ouvrait sur la rue
+Où l’on parlait et riait trop fort
+
+Au bout du compte, ce samedi soir
+Ressemble aux autres samedis soirs
+Un moment de solitude parmi la multitude
+
+---<b>Refrain</b>---
+Sais-tu seulement ce que ça fait
+D’éclairer le vide des ténèbres ?
+Je ne me prends pas pour un génie,
+Ni pour un débile, ni pour un mec bizarre
+Je ne suis qu’un type normal
+Qui gâche sa lumière ordinaire
+Comme tant d’autres
+Tout comme tant d’autres
+Étoiles esseulées
+
+---<b>Couplet 3</b>---
+J’ai attendu un bon quart d’heure
+Le tram que je n’ai pas pris
+J’ai décidé de rentrer à pied
+
+En rentrant dans mon appartement
+Aussi nickel qu’à l’accoutumée
+Ça ne m’a pas rendu plus heureux que ça
+
+---<b>Couplet 4</b>---
+Je me suis assis sur le tapis mauve
+Là, au milieu du salon
+J’ai senti les larmes sur mes joues
+
+Quand je me suis réveillé ce matin
+J’étais couché sur le tapis mauve
+Je ne me souviens pas vraiment pourquoi
+</pre>
+</details>
 </details>
 <details>
 <summary>Histoire de la chanson</summary>
 <p>
-À Chloé Ernest,<br>
-Ce morceau n’existe que pour toi,<br>
-Ta voix, et tes yeux pétillants.<br>
-Tu le chantes bien mieux que moi...<br>
+À Florian et Élodie Marchive,<br>
+Fidèles des premières heures,<br>
+Qui ont su apprécier cette chanson<br>
+Avant même que je sois capable de la jouer<br>
+D’une traite !<br>
 <br>
-Si ce titre finit sur un album complet,<br>
-Je ne te laisse pas d’autre choix<br>
-Que de prendre place derrière le micro.<br>
-Ces mots sont les premiers que nous ayons échangés,<br>
-Avant même d’avoir entendu le son de ta voix.<br>
-<br>
-À Aurore Beneteau,<br>
-Qui m’a offert le ukulélé<br>
-Qui aurait dû sonner sur ce titre…<br>
-Ça n’a pas marché,<br>
-Mais la prochaine sera la bonne.
+À Jean-Philippe “Chips” Rabier,<br>
+À qui cette chanson était d’abord destinée.<br>
+Clyde en aurait fait quelque chose de plus rock’n’roll !
 </p>
 </details>
 
@@ -400,6 +380,7 @@ Mais la prochaine sera la bonne.
 
 </body>
 </html>
+
 
 
 
