--- a/index.html
+++ b/index.html
@@ -354,6 +354,84 @@ Clyde en aurait fait quelque chose de plus rock’n’roll !
 </details>
 
 </article>
+      <article class="chanson">
+  <h3>On s'en fout</h3>
+  <details>
+    <summary>Voir les paroles</summary>
+    <pre>
+---<b>Couplet 1</b>---
+Je ne sais pas où va nous mener
+Cette histoire que l’on vient de commencer
+Je ne sais pas si l’on viendrait nous chercher
+Si l’on venait à s’égarer
+
+Je ne sais pas si tu es fait pour moi
+Je ne sais pas si je suis faite pour toi
+Mais ce que je sais, c’est que ça ne coûte rien
+D’essayer
+
+---<b>Pré-refrain</b>---
+On va où ?
+Je sais pas
+On s’en fout
+
+---<b>Refrain</b>---
+Viens avec moi t’allonger dans l’herbe
+Lève la tête et regarde le ciel
+Pour voir ce qu’on nous y réserve
+Des moutons, des arbres, des ailes, des zèbres
+Les nuages dont on fait les rêves
+Dessinent peut-être l’enfant dont tu rêves
+
+---<b>Couplet 2</b>---
+Je ne suis pas bien malin mais pas complètement idiot
+Je vois bien le passé qui maltraite ton dos
+Les espoirs oubliés qui pèsent comme un fardeau
+Avenirs jamais nés, qui étaient pourtant si beaux
+
+Je ne sais pas si tu es fait pour moi
+Je ne sais pas si je suis faite pour toi
+Mais ce que je sais, c’est que ça ne coûte rien
+D’essayer
+
+---<b>Refrain</b>---
+Viens avec moi t’allonger dans l’herbe
+Lève la tête et regarde le ciel
+Pour voir ce qu’on nous y réserve
+Des moutons, des arbres, des ailes, des zèbres
+Les nuages dont on fait les rêves
+Dessinent peut-être l’enfant dont tu rêves
+
+---<b>Refrain</b>---
+Viens avec moi t’allonger dans l’herbe
+Lève la tête et regarde le ciel
+Pour voir ce qu’on nous y réserve
+Des moutons, des arbres, des ailes, des zèbres
+
+Les nuages dont on fait les rêves
+Dessinent peut-être l’enfant dont tu rêves
+</pre>
+</details>
+<details>
+<summary>Histoire de la chanson</summary>
+<p>
+À Karine Rebecca Delas Stocker,<br>
+Ma p’tite femme qui me supporte chaque jour,<br>
+<br>
+Merci d’avoir chanté,<br>
+Merci d’avoir eu cette idée de cadeau insensé,<br>
+Merci d’être à l’écoute, toujours,<br>
+De me surprendre, encore.<br>
+<br>
+Ceci est notre chanson à nous,<br>
+L’une de celles dont je suis le plus fier<br>
+(Elle a même reçu la troisième place dans un concours, chantée par d’autres !)<br>
+<br>
+Voilà pourquoi elle clôture cette belle aventure.
+</p>
+</details>
+
+</article>
       
     </section>
 
@@ -380,6 +458,7 @@ Clyde en aurait fait quelque chose de plus rock’n’roll !
 
 </body>
 </html>
+
 
 
 
