--- a/index.html
+++ b/index.html
@@ -432,6 +432,136 @@ Voilà pourquoi elle clôture cette belle aventure.
 </details>
 
 </article>
+      <article class="chanson">
+  <h3>Planes and friends</h3>
+  <details>
+    <summary>Voir les paroles</summary>
+    <pre>
+---<b>Couplet 1</b>---
+It’s just a weekend trip to ease my mind
+A one-hour flight away from my life
+
+As I am stepping into the terminal
+I guess this is nothing but a memory
+
+---<b>Refrain</b>---
+I would say
+Every now and then
+When I was younger
+Then I would pretend
+Everything starts out with a plane
+
+---<b>Couplet 2</b>---
+I do remember the first time when
+I left my homeland to live abroad
+
+A strange mixture of fear and desire
+I felt very anxious, but I liked it
+
+Well, I guess fascination is rather toxic
+For I am looking forward to knowing it, knowing it once more
+
+---<b>Refrain</b>---
+I’d like to say
+I’d like to say again
+Before I’m older
+Then I shall pretend
+Everything starts out, everything starts out with a plane
+
+---<b>Couplet 3</b>---
+Even if I was not a wealthy man,
+My wage was nothing to complain about
+
+I liked my job and I liked Germany
+But there were a few people I missed too much
+
+I finally decided to come back to France
+Start it all over again next to my kins
+
+---<b>Pont</b>---
+I can say
+What I didn’t know then
+Though I am dead sure
+I’ll get away again
+
+---<b>Refrain</b>---
+Everything starts out, everything starts out, everything
+Starts out with a friend
+</pre>
+    <details>
+      <summary>Voir la traduction</summary>
+      <pre>
+AVIONS ET AMIS
+
+---<b>Couplet 1</b>---
+Ce n’est qu’un p’tit week-end pour souffler
+À une heure de vol de ma vie.
+
+Alors que j’entre dans l’aéroport,
+Un frisson me parcourt l’échine.
+
+Je n’ai pas froid, je n’ai pas peur,
+J’imagine que ce n’est qu’un souvenir.
+
+---<b>Refrain</b>---
+Comme je le disais parfois
+Quand j’étais plus jeune que je ne prétendais l’être
+Tout commence par un avion.
+
+---<b>Couplet 2</b>---
+Je me souviens bien de la première fois
+Où j’ai quitté ma terre natale pour vivre à l’étranger.
+
+Un mélange étrange, peur et désir à la fois,
+Que j’aimais malgré la trouille.
+
+La fascination doit être addictive,
+Parce qu’il me tarde de la ressentir encore une fois.
+
+---<b>Refrain</b>---
+Je voudrais encore pouvoir dire
+Avant d’être plus vieux que je ne prétends l’être
+Que tout commence par un avion.
+
+---<b>Couplet 3</b>---
+Même si je n’étais pas riche,
+Je n’avais pas à me plaindre de mon salaire.
+
+J’aimais mon boulot, j’aimais l’Allemagne,
+Mais certaines personnes me manquaient trop.
+
+J’ai finalement décidé de rentrer en France,
+Et de tout recommencer, auprès des miens.
+
+---<b>Refrain</b>---
+Aujourd’hui je peux dire ce que j’ignorais alors,
+Bien que je sois certain de repartir un jour :
+Tout commence par un ami.
+</pre>
+</details>
+</details>
+<details>
+<summary>Histoire de la chanson</summary>
+<p>
+À Olivier Podio,<br>
+Fils de ma tante et tellement plus que ça.<br>
+<br>
+Nous avons tant partagé en nous voyant si peu,<br>
+Mais à chaque fois, c’était comme si nous nous étions quittés la veille.<br>
+<br>
+Tu es la partie visible et brillante de notre iceberg,<br>
+Nos eaux figées, si différentes,<br>
+Mais arrachées au flanc d’une même montagne.<br>
+<br>
+Tu m’as permis de trouver en moi<br>
+Le peu de confiance que j’ai aujourd’hui,<br>
+Et l’humilité qui, paradoxalement, me faisait défaut.<br>
+<br>
+Merci pour tout, vraiment.
+</p>
+</details>
+
+</article>
       
     </section>
 
@@ -458,6 +588,7 @@ Voilà pourquoi elle clôture cette belle aventure.
 
 </body>
 </html>
+
 
 
 
