--- a/index.html
+++ b/index.html
@@ -562,6 +562,61 @@ Merci pour tout, vraiment.
 </details>
 
 </article>
+      <article class="chanson">
+  <h3>What if</h3>
+  <details>
+    <summary>Voir les paroles</summary>
+    <pre>
+---<b>Couplet 1</b>---
+We were both born under the same star
+That shines uncanny lights
+On the path in front of us
+
+We like to stop and stare for hours
+Watching tiny little things
+Observing ants, observing bugs
+
+I've been through every difficulty
+You are experiencing
+I am striving to make your burden
+A little lighter...
+
+---<b>Refrain</b>---
+What if, what if I didn't make it
+What if I simply failed, even that close to the aim
+What if, what if I fell down from the edge
+Would you still call me Daddy?
+
+---<b>Couplet 2</b>---
+Maybe we will bear the same scar
+That gives uncanny charms
+To those who don’t care to be alone
+
+Every aspect of your temper
+Is genetically mine
+Will you ever forgive me?
+
+---<b>Refrain (x2)</b>---
+What if, what if I didn't make it
+What if I simply failed, even that close to the aim
+What if, what if I fell down from the edge
+Would you still call me Daddy?
+</pre>
+    <details>
+      <summary>Voir la traduction</summary>
+      <pre>
+</>
+</pre>
+</details>
+</details>
+<details>
+<summary>Histoire de la chanson</summary>
+<p>
+</>
+</p>
+</details>
+
+</article>
       
     </section>
 
@@ -588,6 +643,7 @@ Merci pour tout, vraiment.
 
 </body>
 </html>
+
 
 
 
