--- a/index.html
+++ b/index.html
@@ -623,7 +623,23 @@ Would you still call me Daddy?
     <section id="remerciements">
       <h2>Remerciements</h2>
       <p>
-        Merci à toutes les personnes qui ont cru en moi, etc...
+        À ma femme Karine, qui est à l’origine de cette douce folie,<br>
+Et à la famille et aux amis pour avoir financé un cadeau d’anniversaire incroyable,<br>
+Pour mes 40 ans !<br>
+<br>
+À Damien, pour sa patience et son écoute — humaine autant que musicale.<br>
+<br>
+Aux musiciens de tous poils qui ont jalonné mon parcours :<br>
+Mickaël Perez, Chips, Olivier Podio, Maxime Massa.<br>
+<br>
+Une pensée toute particulière aux professionnels bienveillants dont le talent n’a jamais terni l’humilité :<br>
+David Pilarsky, Monsieur Lawrence Collins, Mr Fly.<br>
+<br>
+À Olivier Podio, déjà cité plus haut — mais qui m’a tant appris qu’il lui fallait sa ligne à lui !<br>
+<br>
+À Clara et Ethan, mes amours…<br>
+À qui mille pages de mots tendres ne sauraient rendre justice.<br>
+Je vous aime tant, mes bouchons.
       </p>
     </section>
 
@@ -643,6 +659,7 @@ Would you still call me Daddy?
 
 </body>
 </html>
+
 
 
 
