--- a/index.html
+++ b/index.html
@@ -644,12 +644,8 @@ Je vous aime tant, mes bouchons.
     </section>
 
     <section id="reseaux">
-      <h2>Me suivre</h2>
-      <! --<ul class="social-links">
-        <li><a href="facebook" target="_blank">Facebook</a></li>
-        <li><a href="youtube" target="_blank">YouTube</a></li>
-        <li><a href="spotify" target="_blank">Spotify</a></li>
-      </ul>-->
+      <h2>Me Contacter</h2>
+      <h6>Mon numéro de téléphone : 0670935766</h6>
     </section>
   </main>
 
@@ -659,6 +655,7 @@ Je vous aime tant, mes bouchons.
 
 </body>
 </html>
+
 
 
 
