--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <a href="#paroles">Paroles</a>
       <a href="#remerciements">Remerciements</a>
-      <a href="#reseaux">Réseaux</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -643,7 +643,7 @@ Je vous aime tant, mes bouchons.
       </p>
     </section>
 
-    <section id="reseaux">
+    <section id="contact">
       <h2>Me Contacter</h2>
       <h4>Mon numéro de téléphone : 0670935766</h4>
     </section>
@@ -655,6 +655,7 @@ Je vous aime tant, mes bouchons.
 
 </body>
 </html>
+
 
 
 
