--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ Je vous aime tant, mes bouchons.
 
     <section id="contact">
       <h2>Me Contacter</h2>
-      <h4>Mon numéro de téléphone : 0670935766</h4>
+      <h4>Mon numéro de téléphone : 06 70 93 57 66</h4>
     </section>
   </main>
 
@@ -655,6 +655,7 @@ Je vous aime tant, mes bouchons.
 
 </body>
 </html>
+
 
 
 
